validated the for using Vuelidate

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "commonjs",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite  --open",
     "build": "vite build",
     "preview": "vite preview"
   },
